--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@types/node": "^22.15.18",
     "allure-commandline": "^2.34.0",
     "allure-playwright": "^3.2.2"
+  },
+  "dependencies": {
+    "csv-parse": "^5.6.0"
   }
 }
