--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "playwrightexample",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "screenshots": "npx playwright test screenshot.spec.js --headed",
     "bddfeatures": "cucumber-js tests/Practice/Cucumber-BDD/features --require tests/Practice/Cucumber-BDD/features/step_definitions --require tests/Practice/Cucumber-BDD/features/support"
