--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@cucumber/cucumber": "^11.3.0",
     "csv-parse": "^5.6.0",
+    "electron": "^39.2.7",
     "exceljs": "^4.4.0"
   }
 }
